[package]
name = "bitwarden-napi"
version = "0.3.1"
authors = ["Bitwarden Inc"]
license-file = "LICENSE"
repository = "https://github.com/bitwarden/sdk"
homepage = "https://bitwarden.com"
description = """
N-API bindings for the Bitwarden Secrets Manager SDK
"""
keywords = ["bitwarden", "secrets manager"]
edition = "2021"
rust-version = "1.57"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
napi = {version="2", features=["async"]}
napi-derive = "2"
log = "0.4.18"
env_logger="0.10.0"

bitwarden-json = { path = "../bitwarden-json", version = "0.3.0", features = ["secrets"] }

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
