[package]
name = "bitwarden-napi"
version = "0.3.1"
description = """
N-API bindings for the Bitwarden Secrets Manager SDK
"""
keywords = ["bitwarden", "secrets-manager"]
publish = false

authors.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
license-file.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bitwarden-json = { path = "../bitwarden-json", version = "0.3.0", features = [
    "secrets",
] }
env_logger = "0.11.1"
log = "0.4.20"
napi = { version = "2", features = ["async"] }
napi-derive = "2"

[build-dependencies]
napi-build = "2.1.0"

[profile.release]
lto = true

[lints]
workspace = true
