[package]
name = "bitwarden-py"
version = "0.1.0"
publish = false

authors.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
license-file.workspace = true
keywords.workspace = true

[lib]
name = "bitwarden_py"
crate-type = ["cdylib"]

[dependencies]
bitwarden-json = { path = "../bitwarden-json", features = ["secrets"] }
pyo3 = { version = "0.23.0", features = ["extension-module"] }
pyo3-log = "0.12.0"

[build-dependencies]
pyo3-build-config = { version = "0.23.0" }

[target.'cfg(not(target_arch="wasm32"))'.dependencies]
tokio = { workspace = true, features = ["rt-multi-thread"] }

[lints]
workspace = true
