[package]
name = "bitwarden-uniffi"
version = "0.1.0"
publish = false

authors.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
license-file.workspace = true

[features]
docs = ["dep:schemars"] # Docs

[lib]
crate-type = ["lib", "staticlib", "cdylib"]
bench = false

[dependencies]
async-lock = "3.3.0"
async-trait = "0.1.80"
bitwarden = { workspace = true, features = ["mobile", "internal"] }
bitwarden-crypto = { workspace = true, features = ["mobile"] }
bitwarden-generators = { workspace = true, features = ["mobile"] }
chrono = { version = ">=0.4.26, <0.5", features = [
    "serde",
    "std",
], default-features = false }
log = "0.4.20"
env_logger = "0.11.1"
schemars = { version = ">=0.8, <0.9", optional = true }
thiserror = ">=1.0.40, <2.0"
uniffi = "=0.27.2"
uuid = ">=1.3.3, <2"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.13"

[build-dependencies]
uniffi = { version = "=0.27.2", features = ["build"] }

[lints]
workspace = true
