[package]
name = "bitwarden-uniffi"
version = "0.1.0"
publish = false

authors.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
license-file.workspace = true

[features]

[lib]
crate-type = ["lib", "staticlib", "cdylib"]
bench = false

[dependencies]
async-trait = "0.1.80"
bitwarden-core = { workspace = true, features = ["uniffi"] }
bitwarden-crypto = { workspace = true, features = ["uniffi"] }
bitwarden-exporters = { workspace = true, features = ["uniffi"] }
bitwarden-fido = { workspace = true, features = ["uniffi"] }
bitwarden-generators = { workspace = true, features = ["uniffi"] }
bitwarden-send = { workspace = true, features = ["uniffi"] }
bitwarden-vault = { workspace = true, features = ["uniffi"] }
chrono = { workspace = true, features = ["std"] }
env_logger = "0.11.1"
log = { workspace = true }
schemars = { workspace = true, optional = true }
thiserror = { workspace = true }
uniffi = { workspace = true }
uuid = { workspace = true }

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.14"

# The use of rustls-platform-verifier requires some extra support to communicate with the Android platform
jni = ">=0.19, <0.20"
libloading = ">=0.8.1, <0.9"
rustls-platform-verifier = "0.3.4"

[target.'cfg(target_os = "ios")'.dependencies]
oslog = "0.2.0"

[build-dependencies]
uniffi = { workspace = true, features = ["build"] }

[lints]
workspace = true
