[package]
name = "bitwarden-wasm"
version = "0.1.0"
edition = "2021"
rust-version = "1.71"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.7"
console_log = { version = "1.0.0", features = ["color"] }
js-sys = "0.3.68"
log = "0.4.20"
serde = { version = "1.0.196", features = ["derive"] }
wasm-bindgen = { version = "0.2.91", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.41"

bitwarden-json = { path = "../bitwarden-json", features = [
    "secrets",
    "internal",
] }
futures = "0.3.30"
async-trait = "0.1.77"
async-lock = "3.3.0"
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0.114"

[dev-dependencies]
wasm-bindgen-test = "0.3.41"
