[package]
name = "bitwarden"
description = """
Bitwarden Secrets Manager SDK
"""
keywords = ["bitwarden", "secrets-manager"]

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
license-file.workspace = true

[features]
default = ["secrets"]

internal = [
    "bitwarden-core/internal",
    "dep:bitwarden-exporters",
    "dep:bitwarden-generators",
    "dep:bitwarden-send",
    "dep:bitwarden-vault",
] # Internal testing methods
no-memory-hardening = [
    "bitwarden-core/no-memory-hardening",
] # Disable memory hardening features
uniffi = [
    "bitwarden-core/uniffi",
    "bitwarden-crypto/uniffi",
    "bitwarden-exporters/uniffi",
    "bitwarden-fido/uniffi",
    "bitwarden-generators/uniffi",
    "bitwarden-send/uniffi",
    "bitwarden-vault/uniffi",
] # Uniffi bindings
secrets = ["dep:bitwarden-sm"] # Secrets manager API

[dependencies]
bitwarden-api-api = { workspace = true }
bitwarden-api-identity = { workspace = true }
bitwarden-core = { workspace = true }
bitwarden-crypto = { workspace = true }
bitwarden-exporters = { workspace = true, optional = true }
bitwarden-fido = { workspace = true, optional = true }
bitwarden-generators = { workspace = true, optional = true }
bitwarden-send = { workspace = true, optional = true }
bitwarden-sm = { workspace = true, optional = true }
bitwarden-vault = { workspace = true, optional = true }
thiserror = ">=1.0.40, <2.0"

[lints]
workspace = true
