[package]
name = "bitwarden"
description = """
Bitwarden Secrets Manager SDK
"""
keywords = ["bitwarden", "secrets-manager"]

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
license-file.workspace = true

[features]
default = ["secrets"]

no-memory-hardening = [
    "bitwarden-core/no-memory-hardening",
] # Disable memory hardening features
secrets = [
    "bitwarden-core/secrets",
    "dep:bitwarden-sm",
    "dep:bitwarden-generators",
] # Secrets manager API
wasm = ["bitwarden-core/wasm"] # WASM support

[dependencies]
bitwarden-api-api = { workspace = true }
bitwarden-api-identity = { workspace = true }
bitwarden-core = { workspace = true }
bitwarden-crypto = { workspace = true }
bitwarden-generators = { workspace = true, optional = true }
bitwarden-sm = { workspace = true, optional = true }
thiserror = { workspace = true }

[dev-dependencies]
uuid = { workspace = true }

[lints]
workspace = true
