[package]
name = "bitwarden"
description = """
Bitwarden Secrets Manager SDK
"""
keywords = ["bitwarden", "secrets-manager"]

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
license-file.workspace = true

[features]
default = ["secrets"]

no-memory-hardening = [
    "bitwarden-core/no-memory-hardening",
] # Disable memory hardening features
secrets = [
    "bitwarden-core/secrets",
    "dep:bitwarden-sm",
    "dep:bitwarden-generators",
] # Secrets manager API
wasm = [] # WASM support

[dependencies]
bitwarden-core = { workspace = true }
bitwarden-generators = { workspace = true, optional = true }
bitwarden-sm = { workspace = true, optional = true }
thiserror = ">=1.0.40, <2.0"

[dev-dependencies]
uuid = { version = ">=1.3.3, <2.0", features = ["serde", "v4"] }

[lints]
workspace = true
