[package]
name = "bw"
version = "0.0.2"
description = """
Bitwarden Password Manager CLI
"""
keywords = ["bitwarden", "password-manager", "cli"]

authors.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
license-file.workspace = true

[dependencies]
bitwarden = { workspace = true, features = ["internal"] }
bitwarden-cli = { workspace = true }
bitwarden-crypto = { workspace = true }
clap = { version = "4.5.4", features = ["derive", "env"] }
color-eyre = "0.6.3"
env_logger = "0.11.1"
inquire = "0.7.0"
log = "0.4.20"
tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros"] }

[dev-dependencies]
tempfile = "3.10.0"

[lints]
workspace = true
