[package]
name = "bw"
version = "0.0.2"
description = """
Bitwarden Password Manager CLI
"""
keywords = ["bitwarden", "password-manager", "cli"]

authors.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
license-file.workspace = true

[dependencies]
bat = { version = "0.24.0", features = [
    "regex-onig",
], default-features = false }
bitwarden = { workspace = true, features = ["internal", "state"] }
bitwarden-cli = { workspace = true }
bitwarden-crypto = { workspace = true }
chrono = { version = "0.4.38", features = [
    "clock",
    "std",
], default-features = false }
clap = { version = "4.5.4", features = ["derive", "env"] }
comfy-table = "7.1.1"
color-eyre = "0.6.3"
env_logger = "0.11.1"
inquire = "0.7.0"
log = "0.4.20"
tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros"] }
serde = "1.0.196"
serde_json = ">=1.0.96, <2"
serde_yaml = "0.9"

[dev-dependencies]
tempfile = "3.10.0"

[lints]
workspace = true
