[package]
name = "bws"
version = "0.5.0"
description = """
Bitwarden Secrets Manager CLI
"""
keywords = ["bitwarden", "secrets-manager", "cli"]
exclude = ["Dockerfile*", "entitlements.plist"]

authors.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
license-file.workspace = true

[dependencies]
atty = "0.2.14"
bat = { version = "0.24.0", features = [
    "regex-onig",
], default-features = false }
bitwarden = { workspace = true, features = ["secrets"] }
bitwarden-cli = { workspace = true }
chrono = { version = "0.4.38", features = [
    "clock",
    "std",
], default-features = false }
clap = { version = "4.5.4", features = ["derive", "env", "string"] }
clap_complete = "4.5.2"
color-eyre = "0.6.3"
comfy-table = "7.1.1"
directories = "5.0.1"
env_logger = "0.11.1"
log = "0.4.20"
regex = { version = "1.10.3", features = [
    "std",
    "perf",
], default-features = false }
serde = "1.0.196"
serde_json = "1.0.113"
serde_yaml = "0.9"
supports-color = "3.0.0"
thiserror = "1.0.57"
tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros"] }
toml = "0.8.10"
uuid = { version = "1.7.0", features = ["serde"] }
which = "6.0.0"

[build-dependencies]
bitwarden-cli = { workspace = true }
clap = { version = "4.5.4", features = ["derive", "string"] }
clap_complete = "4.5.2"
clap_mangen = "0.2.20"
uuid = { version = "1.7.0" }

which = "6.0.0"

[dev-dependencies]
tempfile = "3.10.0"

[lints]
workspace = true
