[package]
name = "sdk-schemas"
version = "0.1.0"
edition = "2021"
rust-version = "1.57"

[features]
internal = [
    "bitwarden/internal",
    "bitwarden-json/internal",
    "bitwarden-uniffi/docs",
]

[dependencies]
anyhow = "1.0.79"
itertools = "0.12.1"
schemars = { version = "0.8.16", features = ["preserve_order"] }
serde_json = "1.0.113"

bitwarden = { path = "../bitwarden" }
bitwarden-json = { path = "../bitwarden-json" }
bitwarden-uniffi = { path = "../bitwarden-uniffi" }
