[package]
name = "sdk-schemas"
version = "0.1.0"
publish = false

authors.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
license-file.workspace = true
keywords.workspace = true

[features]
internal = [
    "bitwarden/internal",
    "bitwarden-json/internal",
    "bitwarden-uniffi/docs",
]

[dependencies]
anyhow = "1.0.79"
bitwarden = { workspace = true }
bitwarden-json = { path = "../bitwarden-json" }
bitwarden-uniffi = { path = "../bitwarden-uniffi" }
itertools = "0.12.1"
schemars = { version = "0.8.16", features = ["preserve_order"] }
serde_json = "1.0.113"
